--- a/galeri.html
+++ b/galeri.html
@@ -58,11 +58,11 @@
             <div class="desc">Alam ganteng</div>
         </div>
         <div class="galery">
-            <a href="gambar/tahu.jpg" ></a><img src="gambar/_MG_0229.JPG" alt="tahu" width="600" height="400"></a>
+            <a href="gambar/tahu.jpg" ></a><img src="gambar/_MG_0229.JPG" alt="Futsal" width="600" height="400"></a>
             <div class="desc">Alam ganteng</div>
         </div>
         <div class="galery">
-            <a href="gambar/tahu.jpg" ></a><img src="gambar/IMG_0482.JPG" alt="tahu" width="600" height="400"></a>
+            <a href="gambar/tahu.jpg" ></a><img src="gambar/IMG_0482.JPG" alt="alam" width="600" height="400"></a>
             <div class="desc">Alam ganteng</div>
     </section>
 
