--- a/about.html
+++ b/about.html
@@ -43,6 +43,26 @@
                 <td>UNIQLO HOODIE</td>
                 <td>Rp1.000.000</td>
             </tr>
+             <tr>
+                <td>PUMA SHIRT</td>
+                <td>Rp100.000</td>
+            </tr>
+            <tr>
+                <td>ADIDAS PREDATOR</td>
+                <td>Rp5.000.000</td>
+            </tr>
+            <tr>
+                <td>NIKE MERCURIAL</td>
+                <td>Rp6.000.000</td>
+            </tr>
+            <tr>
+                <td>BAPE HOODIE</td>
+                <td>Rp1.900.000</td>
+            </tr>
+            <tr>
+                <td>OFF WHITE </td>
+                <td>Rp1.100.000</td>
+            </tr>
             <tr>
                 <td colspan="4">CONTACT PERSON : ONLY ON INSTAGRAM BELOW </td>
                 
